<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:background="@color/white_press"
        >
    <TextView
            android:id="@+id/shelf_add"
            android:text="@string/add"
            style="@style/menu_txt"
            android:layout_marginTop="5dp"
            />
    <TextView
            android:id="@+id/shelf_del"
            android:text="@string/del"
            style="@style/menu_txt"
            android:layout_marginTop="1dp"
            />
    <TextView
            android:id="@+id/shelf_cancel"
            android:text="@string/cancel"
            style="@style/menu_txt"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            />
</LinearLayout>
