<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
        >
    <include layout="@layout/common_toolbar"/>
    <RadioGroup
            android:id="@+id/catbooks_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:theme="@style/Theme.AppCompat.Light.DarkActionBar"
            android:padding="5dp"
            >
        <TextView
                android:text="@string/all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        <RadioButton
                android:id="@+id/catbooks_hot"
                android:text="@string/hot"
                style="@style/radio_btn"
                />
        <RadioButton
                android:id="@+id/catbooks_over"
                android:text="@string/over"
                style="@style/radio_btn"
                />
        <RadioButton
                android:id="@+id/catbooks_new"
                android:text="@string/new_book"
                style="@style/radio_btn"
                />
    </RadioGroup>
    <com.scwang.smartrefresh.layout.SmartRefreshLayout
            android:id="@+id/catbooks_refresh"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
        <com.scwang.smartrefresh.layout.header.ClassicsHeader
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        <android.support.v7.widget.RecyclerView
                android:id="@+id/catbooks_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        <com.scwang.smartrefresh.layout.footer.ClassicsFooter
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
    </com.scwang.smartrefresh.layout.SmartRefreshLayout>
</LinearLayout>
