<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
        >
    <include layout="@layout/common_toolbar"/>
    <include layout="@layout/item_catbooks"
             android:layout_width="match_parent"
             android:layout_height="100dp"
            />
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="@dimen/dp_10"
            >
        <Button
                android:id="@+id/book_add"
                android:text="@string/book_add"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                />
        <Button
                android:id="@+id/book_read"
                android:text="@string/book_start_read"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                />
        <Button
                android:id="@+id/book_down"
                android:text="@string/book_download"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                />
    </LinearLayout>
    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white_press"
            android:layout_alignParentBottom="true"
            />
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
        <TextView
                android:id="@+id/book_resource"
                android:text="@string/book_resource"
                style="@style/text_single"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_margin="@dimen/dp_10"
                />
        <ImageView
                android:src="@drawable/home_icon_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|right"
                android:layout_marginRight="@dimen/dp_10"
                />
    </LinearLayout>
    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white_press"
            android:layout_alignParentBottom="true"
            />
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
        <TextView
                android:id="@+id/book_directory"
                android:text="@string/read_setting_directory"
                style="@style/text_single"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_margin="@dimen/dp_10"
                />
        <ImageView
                android:src="@drawable/home_icon_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|right"
                android:layout_marginRight="@dimen/dp_10"
                />
    </LinearLayout>

    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white_press"
            android:layout_alignParentBottom="true"
            />
    <TextView
            android:id="@+id/book_shortIntro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="3"
            android:layout_margin="@dimen/dp_10"
            />
</LinearLayout>
