<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">
    <include layout="@layout/common_toolbar"/>
    <android.support.v7.widget.RecyclerView
            android:id="@+id/local_recycler"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            />
    <TextView
            android:id="@+id/local_empty"
            android:text="@string/local_empty"
            android:textSize="20dp"
            android:textColor="@color/background"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="100dp"
            android:layout_gravity="center_horizontal"
            android:visibility="gone"
            />
    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/background"
            />
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="5dp"
            >
        <TextView
                android:id="@+id/local_all"
                android:text="@string/local_all"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_green_selector"
                android:gravity="center"
                android:padding="10dp"
                android:onClick="onClick"
                />
        <TextView
                android:id="@+id/local_count"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                />
        <TextView
                android:id="@+id/local_ok"
                android:text="@string/ok"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_green_selector"
                android:gravity="center"
                android:padding="10dp"
                android:onClick="onClick"
                />
    </LinearLayout>
</LinearLayout>
