<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="#000000">

    <com.li.libook.util.book.PageWidget
            android:id="@+id/read_page"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
    <include
            android:id="@+id/read_bar"
            layout="@layout/common_toolbar"
            android:layout_height="100dp"
            android:layout_width="match_parent"
            android:visibility="gone"
            />
    <RelativeLayout
            android:id="@+id/read_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom"
            android:visibility="gone"
            >
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <RelativeLayout
                    android:id="@+id/read_progress_line"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:layout_marginBottom="20dp"
                    android:padding="5dp"
                    android:background="@color/read_bg"
                    >
                <TextView
                        android:id="@+id/read_progress_txt"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:textSize="12sp"
                        android:text="00.00%"/>
            </RelativeLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/read_pop_bottom"
                    android:baselineAligned="false"
                    android:background="@color/read_dialog_bg"
                    android:orientation="vertical"
                    >

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:orientation="horizontal">
                    <TextView
                            android:id="@+id/read_pre"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/read_setting_pre"
                            android:textAlignment="center"
                            android:textSize="16sp"
                            android:textColor="@color/white"
                            android:layout_gravity="center_vertical"
                            />

                    <SeekBar
                            android:id="@+id/read_progress"
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:max="10000"
                            android:layout_gravity="center_vertical">
                    </SeekBar>

                    <TextView
                            android:id="@+id/read_next"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:layout_weight="1"
                            android:text="@string/read_setting_next"
                            android:textAlignment="center"
                            android:textSize="16sp"
                            android:textColor="@color/white"
                            android:layout_gravity="center_vertical"
                            />
                </LinearLayout>
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="5dp"
                        android:orientation="horizontal">
                    <TextView
                            style="@style/txt_common"
                            android:id="@+id/read_directory"
                            android:layout_weight="1"
                            android:drawableTop="@drawable/directory"
                            android:gravity="center"
                            android:text="@string/read_setting_directory"
                            />

                    <TextView
                            style="@style/txt_common"
                            android:id="@+id/read_dayornight"
                            android:layout_weight="1"
                            android:drawableTop="@drawable/dayornight"
                            android:gravity="center"
                            android:text="@string/read_setting_night"
                            />

                    <TextView
                            style="@style/txt_common"
                            android:id="@+id/read_pagemode"
                            android:layout_weight="1"
                            android:drawableTop="@drawable/pagemode"
                            android:gravity="center"
                            android:text="@string/read_setting_pagemode"
                            />

                    <TextView
                            style="@style/txt_common"
                            android:id="@+id/read_setting"
                            android:layout_weight="1"
                            android:drawableTop="@drawable/setting"
                            android:gravity="center"
                            android:text="@string/setting"
                            />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>
